fix: use platform threads for HTTP sim server to avoid virtual thread pinning
com.sun.net.httpserver.HttpServer internals use synchronized blocks that
cause virtual thread carrier pinning when the handler sleeps. On small VMs
with 2 vCPUs, this deadlocks the server after just 2 concurrent requests,
all HttpClient.send calls block forever, producing 0 throughput for Java
HTTP scenarios.

Switch to Executors.newCachedThreadPool and add a 5s request timeout as
a safety net.